[FIX] web: mobile horizontal scroll on listView with search panel
This commits aims to fix the horizontal scroll overflow which only
affects list views with a search panel (e.g. Rental, Employee, etc.).

task-5888678

X-original-commit: a756e4d6c685c637fd480961cfe34bbe28e1f8d3

--- a/addons/web/static/src/search/search_panel/search_panel.scss
+++ b/addons/web/static/src/search/search_panel/search_panel.scss
@@ -1,19 +1,13 @@
 // ------- View with SearchPanel -------
 
 .o_component_with_search_panel {
-    display: flex;
-    align-items: flex-start;
+    @include media-breakpoint-up(md) {
+        display: flex;
 
-    .o_renderer {
-        flex: 1 1 100%;
-        overflow: auto; // make the renderer and search panel scroll individually
-        max-height: 100%;
-        position: relative;
-        height: 100%;
-
-        @include media-breakpoint-down(md) {
-            overflow: visible;
-        }    
+        .o_renderer {
+            overflow: auto;
+            width: 100%;
+        }
     }
 }
 
